login working; packagemanager layout working again

--- a/existdb-dashboard.html
+++ b/existdb-dashboard.html
@@ -59,6 +59,10 @@ an application bundling all admin apps in one place.
                 display: none;
             }
 
+            #pages{
+                height: 100%;
+            }
+
             .righttool {
                 margin-right: 20px;
             }
@@ -215,26 +219,38 @@ an application bundling all admin apps in one place.
                     packageManagerLoaded: {
                         type: Boolean,
                         value: false
+                    },
+                    path:{
+                        type: String
                     }
                 };
             }
 
-
             connectedCallback() {
                 super.connectedCallback();
                 console.log("dashboard connected");
-                console.log("dashboard connected route ", this.route);
-                this.$.getCurrentUser.generateRequest();
+//                this.$.getCurrentUser.generateRequest();
 //                this.$.getVersion.generateRequest();
 
             }
 
             ready() {
                 super.ready();
-                this.$.location.addEventListener('path-changed', event => this.routeChanged(event))
+                console.log('dashboard ready route attr ', this.path);
+                this.$.location.addEventListener('path-changed', event => this.routeChanged(event));
+
+
+
                 if (!this.route || !this.route.path) {
                     this.route = {};
                     this.set('route.path', '/launcher');
+/*
+                    if(this.path != ""){
+                        this.set('route.path',this.path);
+                    }else{
+                        this.set('route.path', '/launcher');
+                    }
+*/
                 }
 
 /*
@@ -251,7 +267,7 @@ an application bundling all admin apps in one place.
             }
 
             routeChanged(event) {
-                console.log("route changed ", event);
+//                console.log("route changed ", event);
                 console.log("route changed ", this.route);
 
                 var s = this.route.path;
@@ -269,12 +285,12 @@ an application bundling all admin apps in one place.
             }
 
             _showLauncher(e) {
-                console.log('show.... ', e);
+//                console.log('show.... ', e);
                 this.$.pages.select('launcher');
             }
 
             _showPackageManager(e) {
-                console.log('show.... ', e);
+                console.log('show _showPackageManager ', e);
                 this.$.pages.select('packagemanager');
             }
 
@@ -293,7 +309,7 @@ an application bundling all admin apps in one place.
 
             _logout(e){
                 this.route.path = "/#";
-                window.location.href="index.html?logout=true";
+                window.location.href="?logout=true";
             }
 
             _handleCurrentUser(){
