--- a/admin.html
+++ b/admin.html
@@ -8,10 +8,11 @@
     <link rel="stylesheet" href="resources/styles.css"/>
     <script src="bower_components/webcomponentsjs/webcomponents-loader.js"></script>
     <link rel="import" href="dependencies.html"/>
+    <script src="resources/app.js"></script>
 
 
 </head>
-<body>
+<body onload="passRoute()">
     <existdb-dashboard> </existdb-dashboard>
 </body>
 </html>
