--- a/login.html
+++ b/login.html
@@ -85,8 +85,9 @@
             font-family: Arial;
         }
     </style>
+    <script src="resources/app.js"></script>
 </head>
-<body class="login-page">
+<body class="login-page" onload="postRoute()">
     <div class="logo">
         <svg xmlns:xlink="http://www.w3.org/1999/xlink" width="100%" height="100%" version="1.1"
              viewBox="79.68001 2.86 158.32 170.2" xmlns="http://www.w3.org/2000/svg">
@@ -146,8 +147,9 @@
     <div class="login-box well">
         <div class="login-box-body">
             <div class="header">Sign in</div>
-            <form action="login" method="post">
+            <form action="admin" method="post">
                 <input type="hidden" name="duration" value="P7D"/>
+                <input id="route" type="hidden" name="route" />
                 <div class="form-group">
                     <label for="user">Username</label>
                     <input type="text" id="user" name="user" class="form-control" placeholder="User ID" autofocus="autofocus"/>
