added show-login attribute to launcher to conditionally display link.

--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
     <link rel="import" href="bower_components/existdb-launcher/dependencies.html"/>
 </head>
 <body>
-    <existdb-launcher-app ignores='["packagemanager","packageservice","launcher","usermanager","existdb-dashboard"]'> </existdb-launcher-app>
+    <existdb-launcher-app ignores='["packagemanager","packageservice","launcher","usermanager","existdb-dashboard"]' show-login="true"> </existdb-launcher-app>
 </body>
 </html>
