--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="import" href="dependencies.html"/>
     <link rel="import" href="bower_components/existdb-launcher/dependencies.html"/>
 </head>
-<body>
+<body unresolved="unresolved">
     <existdb-launcher-app ignores='["packagemanager","packageservice","launcher","usermanager","existdb-dashboard"]' show-login="true"> </existdb-launcher-app>
 </body>
 </html>
