Fix the login mechanism. Closes #90

--- a/dependencies.html
+++ b/dependencies.html
@@ -31,7 +31,7 @@
 <link rel="import" href="bower_components/app-route/app-location.html">
 <link rel="import" href="bower_components/app-route/app-route.html">
 
-
+<link rel="import" href="bower_components/existdb-launcher/dependencies.html">
 <link rel="import" href="existdb-dashboard.html"/>
 <link rel="import" href="existdb-settings.html"/>
 <link rel="import" href="existdb-styles.html"/>
@@ -48,5 +48,3 @@
 
 
 <!--<link rel="import" href="../existdb-packageservice/existdb-app-details.html"/>-->
-
-
