--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, minimum-scale=1, initial-scale=1, user-scalable=yes"/>
     <title>existdb-dashboard</title>
+    <base href="/exist/apps/dashboard3/"/>
+
     <link rel="stylesheet" href="resources/styles.css"/>
     <script src="assets/@webcomponents/webcomponentsjs/webcomponents-loader.js"> </script>
     <script type="module">
