some basic themes but no switch yet; responsive fixes for narrow layout;

--- a/index.html
+++ b/index.html
@@ -17,24 +17,22 @@
     </script>
 
     <link rel="stylesheet" href="resources/styles.css"/>
+    <link rel="stylesheet" href="resources/default-theme.css" title="default"/>
+    <link rel="alternate stylesheet" href="resources/amber-theme.css" title="amber"/>
+    <link rel="alternate stylesheet" href="resources/blue-theme.css" title="blue"/>
+    <link rel="alternate stylesheet" href="resources/dark-theme.css" title="dark"/>
 
     <style type="text/css">
+
         body{
-            --existdb-font-family:'Roboto', 'Noto', sans-serif;
-            --existdb-header-bg-color:var(--paper-amber-500);
-            --existdb-header-bg-darker:var(--paper-amber-700);
-            --existdb-header-bg-lighter:var(--paper-grey-100);
-            --existdb-header-color:white;
-            --existdb-content-bg: var(--paper-amber-50);
+            --existdb-header-bg-color: var(--paper-amber-500);
+            --existdb-header-color: white;
 
-            font-family: var(--existdb-font-family);
-
+        }
         existdb-login.login{
             display: inline-block;
-            /*padding-right:30px;*/
-            width: 120px;
+            /*width: 120px;*/
             margin-right:30px;
-            background: blue;
         }
         .appContent{
             width: 100%;
