inlined custom icon; added base class for dashboard views; added some css vars

--- a/index.html
+++ b/index.html
@@ -25,7 +25,15 @@
     <style type="text/css">
 
         body{
-            --existdb-header-bg-color: var(--paper-amber-500);
+            --existdb-highlight-color:var(--paper-amber-900);
+            --existdb-content-color:white;
+            --existdb-icon-color:var(--paper-amber-900);
+
+            --existdb-header-bg-color: var(--paper-amber-700);
+            --existdb-secondary-bg-color:var(--paper-amber-500);
+            --existdb-light-bg:var(--paper-amber-300);
+            --existdb-light-contrast:var(--paper-amber-900);
+
             --existdb-header-color: white;
 
         }
@@ -53,6 +61,9 @@
             to {opacity: 1;}
         }
 
+        iron-pages{
+            height: 100%;
+        }
     </style>
 
 </head>
