role-based auth with lazy loading working for the first time;

--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html>
 <head>
     <meta charset="utf-8"/>
@@ -6,8 +7,8 @@
     <base href="/exist/apps/dashboard3/"/>
 
     <script src="assets/@webcomponents/webcomponentsjs/webcomponents-loader.js"> </script>
-    <script src="assets/web-animations-js/web-animations.min.js"> </script>
-    <script src="assets/animejs/lib/anime.min.js"> </script>
+    <script src="assets/web-animations-js/web-animations.min.js" defer="defer"> </script>
+    <script src="assets/animejs/lib/anime.min.js" defer="defer"> </script>
 
     <script type="module">
         import './src/existdb-dashboard.js';
