new lauch-button component (replacement for launcher-app); launcher working with json data now; started a bit of docs

--- a/index.html
+++ b/index.html
@@ -47,6 +47,11 @@
             width: 100%;
         }
 
+        existdb-dashboard, main{
+            height:100%;
+            display:block;
+        }
+
         main > .leaving {
             animation: 1s fadeOut ease-in-out;
         }
