flattened nav -> packages, repo, users + groups have their own nav item; fixed scrolling issues; package and repo views largely working but still last details and testing of actions; refactoring and simplification

--- a/index.html
+++ b/index.html
@@ -36,8 +36,6 @@
 
     <style type="text/css">
 
-        body{
-        }
         existdb-login.login{
             display: inline-block;
             /*width: 120px;*/
@@ -52,6 +50,9 @@
             display:block;
         }
 
+        main{
+            overflow: auto;
+        }
         main > .leaving {
             animation: 1s fadeOut ease-in-out;
         }
@@ -70,6 +71,7 @@
         iron-pages{
             height: 100%;
         }
+
     </style>
 
 </head>
